[package]
name = "masked_message_not_masked"
version = "0.1.0"
authors = ["Jeroen van den Hout <jlvandenhout@gmail.com>"]
edition = "2018"

[dependencies]
iota-streams = { git = "https://github.com/iotaledger/streams", branch = "chrysalis-2", features = ["std", "async", "tangle"] }
tokio = { version = "1.1", features = ["full"] }
utils = { path = "../../utils" }